--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "^2.1.3",
     "sort-by": "^0.0.2",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
