--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "sort-by": "^0.0.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
